# Mixture_Guassian

./: CMakeLists.txt  main.cpp
